--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-dom": "18.3.1",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.1"
   },
   "devDependencies": {
     "eslint": "^9.13.0",
