--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "embla-carousel-autoplay": "^8.3.1",
     "embla-carousel-react": "^8.3.1",
     "framer-motion": "^11.11.11",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.453.0",
     "next": "15.0.2",
     "pg": "^8.13.1",
