--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "radix-ui": "^1.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
